fixed style on mobile view, overflow-y and change title heading font size

--- a/src/component/Covid.css
+++ b/src/component/Covid.css
@@ -2,10 +2,14 @@
 /* import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap');
 
+
+html {
+    overflow-x: hidden;
+}
 body {
     background-color: #15202B;
     font-family: 'Baloo Paaji 2', cursive;
-
+    width: 100%;
     height: 100%;
 
 }
