--- a/src/component/TabelGlobal.css
+++ b/src/component/TabelGlobal.css
@@ -52,7 +52,7 @@ li a:hover {
     background-color: #202E3C;
     margin-top: 20px;
     display: inline-block;
-    font-size: 25px;
+    font-size: 20px;
 }
 .tabel-title i {
     margin-right: 5px;
